sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:4: error: '=' expected but ')' found.
  var ecart ) getNombreValeurs()/2
            ^AlgShellSort:15: error: illegal start of simple expression
} 
^